--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,2 @@
-@import "./styles/_reset.scss";
-@import "./styles/_base.scss";
+@import "./general-styles/_reset.scss";
+@import "./general-styles/_base.scss";
