--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,6 +1,6 @@
 #root {
     position: absolute;
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(0, -50%);
+    width: 100%;
 }
