--- a/src/components/control-panel/control-panel.scss
+++ b/src/components/control-panel/control-panel.scss
@@ -1,9 +1,13 @@
 .control-panel {
-    margin: 10px;
+    margin: 1.5em;
     text-align: center;
 }
 
-.restart-btn {
+#dimension-input {
+    margin: 0 1.5em;
+}
+
+#restart-btn {
     height: 2em;
     border-radius: 10px;
 }
