--- a/src/general-styles/_variables.scss
+++ b/src/general-styles/_variables.scss
@@ -1,4 +1,8 @@
 $primary: #F6E27F;
+$input-radius: 10px;
+$big-cell: 100px;
+$medium-cell: $big-cell / 2;
+$small-cell: $medium-cell / 2;
 
 h1 {
   margin-top: 0;
