Make grid expand on cell size increase; add ability to make several players

--- a/src/components/control-panel/control-panel.scss
+++ b/src/components/control-panel/control-panel.scss
@@ -1,7 +1,9 @@
 @import "../../general-styles/variables";
 
 .control-panel {
-    margin: 1.5em;
+    box-sizing: border-box;
+    padding: $control-panel-padding;
+    height: $control-panel-height;
     text-align: center;
 }
 
