--- a/src/general-styles/_variables.scss
+++ b/src/general-styles/_variables.scss
@@ -4,6 +4,12 @@ $big-cell: 100px;
 $medium-cell: $big-cell / 2;
 $small-cell: $medium-cell / 2;
 
+$base-font-size: 16px;
+
+$control-panel-padding: 1.5em;
+$control-panel-line-height: 1.5em;
+$control-panel-height: $control-panel-padding * 2 + $control-panel-line-height;
+
 h1 {
   margin-top: 0;
   font-size: 3.998em;
