--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,6 +1,6 @@
+@import "../general-styles/variables";
+
 #root {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
     width: 100%;
+    height: 100%;   
 }
