--- a/src/components/grid/cell/cell.scss
+++ b/src/components/grid/cell/cell.scss
@@ -1,57 +1,27 @@
 @import "../../../general-styles/variables";
 
-%filled-cell {
-    background-color: #fff;
-    &::before {
-        font-size: 72px;
-        width: 100%;
-        height: 100%;
-    }
-}
-
 .cell {
-    margin: 2px;
-    width: 100px;
-    height: 100px;
-    border-width: 0;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    min-width: 3vmin;
+    min-height: 3vmin;
 
-    position: relative;
-
-    &::before {
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        color: #fff;
-    }
+    border: 2px solid #fff;
+    font-size: 3vmin;
+    line-height: 3vmin;
 
     &.win-cell{
         background-color: #dcffdc;
-        &::before {
-            color: rgb(21, 58, 46);
-        }
+        color: rgb(21, 58, 46);
     }
 
-    @media screen and (max-width: 50 * ) {
-        
+    &:focus {
+        border: 2px solid #d3f7ff;
+        outline: none;
     }
 }
 
 .empty-cell {
     background-color: #e5f3f5;
-}
-
-.nought-cell {
-    @extend %filled-cell;
-    &::before {
-        content: "O";
-        color: #d60000;
-    }
-}
-.cross-cell {
-    @extend %filled-cell;
-    &::before {
-        content: "X";
-        color: #141414;
-    }
 }
