--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -1,3 +1,12 @@
+@import "../../general-styles/variables";
+
+.grid-wrapper {
+    overflow: hidden;
+    height: calc(100% - #{$control-panel-height});
+}
+
 .grid {
-    font-size: 0;
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
 }
