--- a/src/general-styles/_base.scss
+++ b/src/general-styles/_base.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 html {
   font-family: 'Roboto', Helvetica, sans-serif;
   font-size: 100%;
@@ -12,6 +14,11 @@ html {
 body {
   padding: 0;
   margin: 0;
+
+  width: 100vw;
+  height: 100vh;
+
+  font-size: $base-font-size;
 }
 
 small, .font_small {font-size: 0.707em;}
