--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -2,5 +2,19 @@
 
 #root {
     width: 100%;
-    height: 100%;   
+    height: 100%;  
+    
+    display: flex;
+    flex-direction: column;
+
+    #grid-wrapper {
+        flex-shrink: 1;
+        overflow: hidden;
+    }
+
+    #control-panel {
+        flex-shrink: 0;
+        flex-grow: 1;
+        height: auto;
+    }
 }
