--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -1,11 +1,11 @@
 @import "../../general-styles/variables";
 
-.grid-wrapper {
+#grid-wrapper {
     overflow: hidden;
     height: calc(100% - #{$control-panel-height});
 }
 
-.grid {
+#grid {
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
