--- a/src/general-styles/_variables.scss
+++ b/src/general-styles/_variables.scss
@@ -1,6 +1,8 @@
 $primary: #F6E27F;
 
 $disabled-input-color: #cfcfcf;
+$win-combination-colour: #02a771;
+$win-combination-background-colour: #dcffdc;;
 
 $body-margin-value: 5;
 
